# Dummy-Mar

./: .gitignore  GITHUB_PUBLISHING_CN.md  LICENSE  README.md
1.Hardware/LedRing/: LedRing.PrjPCB
1.Hardware/motor35/: Motor-35.html
1.Hardware/motor42/: Motor-42.html
1.Hardware/ref-controller/: REF-Base.html
2.Model/3D打印STL文件/: 35PCB外壳A.3mf  35PCB外壳A.stl  35PCB外壳B.3mf  35PCB外壳B.stl  42PCB外壳A.stl  42PCB外壳B.stl  J1.stl  J2J3.stl  J4.stl  J4法兰盘.stl  J5A.stl  J5B.stl  J5法兰盘.stl  J6.stl  基座.3mf  基座.stl  基座底板.3mf  基座底板.stl  外壳B.stl  外壳C.stl  控制器内衬.stl  控制器外壳.stl
2.Model/CNC加工STEP文件/: J1.step  J23.step  J4.step  J4法兰盘.step  J5A.step  J5B.step  J5法兰盘.step  J6.step  (+1 more)
4.Software/DummyRobot-SDK/: .gitignore  README.md  README_CN.md  STRUCTURED_LIGHT_RESOURCES_CN.md  build_package.bat  opencv_camera_smoke_test.py  pyproject.toml  structured_light_offline_demo.py  structured_light_reference_debug.py  test_connection.py
4.Software/DummyRobot-SDK/src/dummy_robot/: __init__.py  camera.py  client.py  dataset.py  exceptions.py  lerobot_adapter.py  sensors.py  so101_bridge.py  structured_light.py  structured_light_io.py  structured_light_tasks.py  transport.py  types.py  virtual_robot.py
4.Software/DummyRobot-ScanControl/: README_CN.md  pyproject.toml
4.Software/DummyRobot-ScanControl/configs/: joint3_uniform_scan.example.json
4.Software/DummyRobot-ScanControl/src/dummy_robot_scan_control/: __init__.py  cli.py  controller.py
4.Software/DummyRobot-WebConsole/: README.md  pyproject.toml
4.Software/DummyRobot-WebConsole/app/: server.py
4.Software/DummyRobot-WebConsole/app/static/: app.js  index.html  styles.css
5.Misc/: dummy V2版本_bom.xlsx
(+10 files in other folders)
