[project]
name = "dummy-robot-scan-control"
version = "0.1.0"
description = "Raw serial scan-motion controller for DummyRobot"
readme = "README_CN.md"
requires-python = ">=3.9"
dependencies = [
    "dummy-robot-sdk>=0.4.0",
]

[project.scripts]
dummy-robot-uniform-scan = "dummy_robot_scan_control.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
